force-app/main/default/objects/Expense_Items__c/Expense_Items__c.object-meta.xml
<CustomObject>
    <description>All expenses for operating the business.</description>
    <label>Expense Item</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>