force-app/main/default/objects/Expense_Items__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date an expense is due.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>