force-app/main/default/objects/Expense_Items__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>Expense_Items</relationshipName>
    <type>Lookup</type>
</CustomField>