force-app/main/default/objects/Expense_Items__c/listViews/Due_Soon.listView-meta.xml
<ListView>
    <fullName>Due_Soon</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>NEXT_WEEK</value>
    </filters>
    <filters>
        <field>Paid__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Due Soon</label>
</ListView>