force-app/main/default/objects/Expense_Items__c/listViews/Paid.listView-meta.xml
<ListView>
    <fullName>Paid</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paid__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Paid</label>
</ListView>